Fix links, make sure they don't overflow

--- a/app/assets/stylesheets/tweets.css.sass
+++ b/app/assets/stylesheets/tweets.css.sass
@@ -27,6 +27,12 @@ div.tweets
       color: #ccc
     p:last-of-type
       margin: 0
+    a
+      display: inline-block
+      white-space: preserve
+      text-overflow: ellipsis
+      overflow: hidden
+      max-width: 580px - 58px
   .created_at, .reply_to, .reply, .destroy
     display: block
     float: left
